--- a/CLIP-Garbage-classification.ipynb
+++ b/CLIP-Garbage-classification.ipynb
@@ -13,8 +13,9 @@
     "3. Define Paths and Prepare Data Loader\r",
     "4. Define the Classifier Model\n",
     "5. Training and Validation Loops with the Appropriate Loss Function, Optimizer, Learning Rate, Batch Size, and Early Stopping\n",
-    "5.1 If Improvement in Validation Performance, Go Back to Step 5\n",
-    "5.2 If No Improvement in Validation Performance, Go to the Next Stepe8. Testing and Evaluation of Our Model and Extract Relevant Metrics\n",
+    "- 5.1 If Improvement in Validation Performance, Go Back to Step 5\n",
+    "- 5.2 If No Improvement in Validation Performance, Go to the Next Stepe
+     8. Testing and Evaluation of Our Model and Extract Relevant Metrics\n",
     "6. Visualizationvant metrics"
    ]
   },
