--- a/CLIP-Garbage-classification.ipynb
+++ b/CLIP-Garbage-classification.ipynb
@@ -13,10 +13,10 @@
     "3. Define Paths and Prepare Data Loader\r",
     "4. Define the Classifier Model\n",
     "5. Training and Validation Loops with the Appropriate Loss Function, Optimizer, Learning Rate, Batch Size, and Early Stopping\n",
-    "5.1 If Improvement in Validation Performance, Go Back to Step 5\n",
-    "5.2 If No Improvement in Validation Performance, Go to the Next Stepe\n",
-    "8. Testing and Evaluation of Our Model and Extract Relevant Metrics\n",
-    "6. Visualizationvant metrics"
+    " - 5.1 If Improvement in Validation Performance, Go Back to Step 5\n",
+    " - 5.2 If No Improvement in Validation Performance, Go to the Next Step\n",
+    "6. Testing and Evaluation of Our Model and Extract Relevant Metrics\n",
+    "7. Visualizationvant metrics"
    ]
   },
   {
