--- a/CLIP-Garbage-classification.ipynb
+++ b/CLIP-Garbage-classification.ipynb
@@ -14,7 +14,7 @@
     "4. Define the Classifier Model\n",
     "5. Training and Validation Loops with the Appropriate Loss Function, Optimizer, Learning Rate, Batch Size, and Early Stopping\n",
     " - 5.1 If Improvement in Validation Performance, Go Back to Step 5\n",
-    " - 5.2 If No Improvement in Validation Performance, Go to the Next Step\n",
+    " - 5.2 If No Improvement in Validation Performance after 5 Epochs, Go to the Next Step\n",
     "6. Testing and Evaluation of Our Model and Extract Relevant Metrics\n",
     "7. Visualizationvant metrics"
    ]
